Wed Jun  4 14:17:31 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorConfig.cpp:

          Fixing wide character build errors.

Tue Jun  3 21:43:13 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorConfig.cpp:

          Fixed fuzz errors.

Tue Jun  3 20:56:08 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Participant.cpp:

          Changed owner to be the same as the defaulted FederationId.

        * dds/InfoRepo/FederatorConfig.h:
        * dds/InfoRepo/FederatorConfig.cpp:

          Added hashing the federationId off of orb endpoints.

        * dds/InfoRepo/UpdateListener_T.cpp:

          Changed back to using NIL_REPOSITORY.

Tue Jun  3 15:45:29 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * java/tests/messenger/publisher/run_test.pl:
        * java/tests/messenger/run_test.pl:
        * java/tests/messenger/subscriber/run_test.pl:
        * tests/DCPS/Messenger/publisher.cpp:

          Fuzz.

Mon Jun  2 17:17:20 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/publisher/run_test.pl:
        * java/tests/messenger/run_test.pl:
        * java/tests/messenger/subscriber/TestSubscriber.java:
        * java/tests/messenger/subscriber/run_test.pl:
        * tests/DCPS/Messenger/Args.h:
        * tests/DCPS/Messenger/Writer.cpp:
        * tests/DCPS/Messenger/publisher.cpp:
        * tests/DCPS/Messenger/stack_subscriber.cpp:
        * tests/DCPS/Messenger/subscriber.cpp:

          Wait for acks if appropriate, use reliable QOS if reliable
          transport.

Mon Jun  2 14:31:31 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Added locking around pkt_chain_ access in TransportSendStrategy
          stop() to stop the access violation seen during shutdown.
