@@ -1,3 +1,10 @@
+Wed Jun  4 15:00:58 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * dds/InfoRepo/FederatorConfig.cpp:
+
+          Added setting random id when no endpoint is provided
+          (persistence requires endpoints).
+
 Wed Jun  4 14:17:31 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * dds/InfoRepo/FederatorConfig.cpp:
